sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:6: error: value unary_! is not a member of Int
  while (!finished != 0) {
         ^BasicPancake:7: error: not enough arguments for method getMax: (lim: Int)Int.
Unspecified value parameter lim.
    chgmt = getMax();
                  ^